Fixed hex layout bug and clean up to index.html
-Fixed hex layout bug that caused errors when selecting intersections on
border.
-Cleaned up index.html layout and soc.js
-Simplified rendering resources

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,9 @@ body {
     */
 }
 
+.inactive {
+}
+
 .hidden {
     display: none;
 }
